Refactor now playing plugin

Enable option now behaves as "enable on login", and changes at contact
list will be temporary for this login. And use requested presence to
evaluate the new presence by this plugin.

BUG: 307582
BUG: 313126
REVIEW: 113066
FIXED-IN: 0.7